--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "express": "^4.19.2",
     "mocha": "^10.6.0",
     "mongodb": "^6.8.0",
+    "mongoose": "^8.5.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.2",
     "request": "^2.88.0",
